------------
v5.0.0alpha4
------------




------------
v5.0.0alpha3
------------

|+

------------
v5.0.0alpha2
------------

|+

------------
v5.0.0alpha1
------------

[jan] Add API to backup and restore user data.
[mjr] Add ability to save note without redirecting to notebook (Request
      #14085).
[mjr] Add tag browsing/searching (Request #14178).
[jan] Keep original file names when PUTing notes via WebDAV.
[jan] Remove configuration option for database table.
[jan] Return ETags with browse() API method.
[jan] Add browse(), put(), and path_delete() methods to API to support WebDAV
      access.


-------
v4.2.15
-------


-------
v4.2.14
-------

[jan] Officially support PHP 7.
[jan] Fix exporting multiple tags to vNote CATEGORIES (Bug #14057).


-------
v4.2.13
-------

[mjr] Fix saving sync preference when no default notepad exists (Bug #14585).
[mjr] Fix potential infinite recursion in Mnemo_Api::listBy() due to corrupt
      preference values.


-------
v4.2.12
-------

[jan] Update German translation.


-------
v4.2.11
-------

[jan] Update Portuguese translation.
[jan] Update Basque translation.
[mjr] Require Horde_Perms::DELETE for including a notebook as sync-able.


-------
v4.2.10
-------

[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).


------
v4.2.9
------

[jan] Use access rules compatible with both Apache 2.2 and 2.4.
[mjr] Fix fatal error when removing notepads in certain cases.


------
v4.2.8
------

[jan] Update Italian translation.
[mjr] Remove object reference from Content when object is deleted (Bug #14112).
[mjr] Remove tags from Content when tagged object is deleted (Bug #14112).


------
v4.2.7
------

[jan] Update Italian translation.
[jan] Update Czech translation.
[mjr] Fix inconsistent handling of incoming HTML notes from ActiveSync clients
      (Bug #14045).
[mjr] Allow more reasonable length of description field to interop better with
      synchronized clients (Bug #14041).


------
v4.2.6
------
