@@ -4,12 +4,13 @@
   state:
     release: alpha
     api: alpha
-  date: 2021-03-13
+  date: 2022-11-03
   license:
     identifier: ASL
     uri: http://www.horde.org/licenses/apache
-  notes: |+
-    
+  notes: |
+    [rla] Enable PHP 8.x compat.
+    |+
 5.0.0alpha3:
   api: 5.0.0alpha1
   state:
